variables.Variables.scala.error
Erreur de compilation :
Variables:2: error: not found: value nbPas
nbPas=0
^Variables:3: error: too many arguments for method estSurBiscuit: ()Boolean
while (estSurBiscuit(==fausse)){
                    ^Variables:5: error: not found: value nbPas
  nbPas= nbPas + 1
  ^Variables:8: error: not found: value nbPas
while (nbPas!=0){
       ^Variables:10: error: not found: value nbPas
  nbPas=nbPas-1
  ^